--- a/nextflow.config
+++ b/nextflow.config
@@ -3,3 +3,5 @@ manifest {
     description = 'align fastq or realign BAM files for Whole Exome/Whole Genome sequencing data'
     mainScript = 'alignment.nf'
 }
+
+process.container = 'iarcbioinfo/alignment-nf'
