test docker container

--- a/nextflow.config
+++ b/nextflow.config
@@ -4,4 +4,4 @@ manifest {
     mainScript = 'alignment.nf'
 }
 
-process.container = 'iarcbioinfo/alignment-nf'
+process.container = 'iarcbioinfo/alignment-nf:dev'
