debug circleCI config file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
                 machine: true
                 steps:
                     - checkout
-                    - run: - wget -qO- get.nextflow.io | bash ; chmod 755 nextflow ; sudo ln -s ~/project/nextflow /usr/local/bin/ ; sudo apt-get install graphviz
+                    - run: wget -qO- get.nextflow.io | bash ; chmod 755 nextflow ; sudo ln -s ~/project/nextflow /usr/local/bin/ ; sudo apt-get install graphviz
                     - run: cd ~ && git clone --depth=1 https://github.com/iarcbioinfo/data_test.git
                     - run: echo " docker.runOptions = '-u $(id -u):$(id -g)' " > ~/.nextflow/config
                     - run: cd ~/project/ ; docker build -t iarcbioinfo/alignment-nf .
