added conda, docker, and singularity profiles

--- a/nextflow.config
+++ b/nextflow.config
@@ -4,4 +4,16 @@ manifest {
     mainScript = 'alignment.nf'
 }
 
+profiles {
+  conda { process.conda = "$baseDir/environment.yml" }
+  docker { 
+    docker.enabled = true 
+    process.container = 'iarcbioinfo/alignment-nf'
+  }
+  singularity { 
+    singularity.enabled = true 
+    process.container = 'iarcbioinfo/alignment-nf'
+  }
+}
+
 process.container = 'iarcbioinfo/alignment-nf:dev'
