Add specific memory and cpu parameter for BQSR step and put default reporting info in nextflow.config

--- a/nextflow.config
+++ b/nextflow.config
@@ -16,4 +16,29 @@ profiles {
   }
 }
 
-process.container = 'iarcbioinfo/alignment-nf:dev'
+process {
+    process.container = 'iarcbioinfo/alignment-nf:dev'
+    shell =  ['/bin/bash','-o','pipefail']
+}
+
+
+
+timeline {
+  enabled = true
+  file = "${params.output_folder}/nf-pipeline_info/alignment-nf_timeline.html"
+}
+
+report {
+  enabled = true
+  file = "${params.output_folder}/nf-pipeline_info/alignment-nf_report.html"
+}
+
+trace {
+  enabled = true
+  file = "${params.output_folder}/nf-pipeline_info/alignment-nf_trace.txt"
+}
+
+dag {
+  enabled = true
+  file = "${params.output_folder}/nf-pipeline_info/alignment-nf.html"
+}
