debug input_folder mode, increase memory for multiqc, and change nextflow config to allow long conda env creation

--- a/nextflow.config
+++ b/nextflow.config
@@ -5,7 +5,10 @@ manifest {
 }
 
 profiles {
-  conda { process.conda = "$baseDir/environment.yml" }
+  conda { 
+	process.conda = "$baseDir/environment.yml"
+	conda.createTimeout = "200 min"
+  }
   docker { 
     docker.enabled = true 
     process.container = 'iarcbioinfo/alignment-nf'
