--- a/environment.yml
+++ b/environment.yml
@@ -13,9 +13,9 @@ dependencies:
   - qualimap=2.2.2d
   - sambamba=0.7.1
   - samtools=1.9 #1.10 conflicts with sambamba 0.7.1
-  #- samblaster=0.1.26
+  - samblaster=0.1.26
   - bwa=0.7.17
-  - bwakit=0.7.17.dev1
+  - bwakit=0.7.15
   #- r-base=3.6.2
   - r-data.table=1.12.8
   - r-dplyr=1.0.0
