allow unmated pairs (solves a crash with samblaster v0.1.26), update config

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,6 @@
 manifest {
     homePage = 'https://github.com/iarcbioinfo/alignment-nf'
-    description = 'align fastq or realign BAM files for Whole Exome/Whole Genome sequencing data'
+    description = 'Align fastq or realign BAM files from Whole Exome/Whole Genome sequencing data'
     mainScript = 'alignment.nf'
 }
 
@@ -11,11 +11,12 @@ profiles {
   }
   docker { 
     docker.enabled = true 
-    process.container = 'iarcbioinfo/alignment-nf'
+    process.container = 'iarcbioinfo/alignment-nf:v1.1'
   }
   singularity { 
     singularity.enabled = true 
-    process.container = 'iarcbioinfo/alignment-nf'
+    process.container = 'shub://IARCbioinfo/alignment-nf:v1.1'
+    pullTimeout = "200 min"
   }
 }
 
