adding bazam to aln and using new docker container

--- a/nextflow.config
+++ b/nextflow.config
@@ -5,17 +5,18 @@ manifest {
 }
 
 profiles {
-  conda { 
+  conda {
 	process.conda = "$baseDir/environment.yml"
 	conda.createTimeout = "200 min"
   }
-  docker { 
-    docker.enabled = true 
-    process.container = 'iarcbioinfo/alignment-nf:v1.2'
+  docker {
+    docker.enabled = true
+    process.container = 'iarcbioinfo/alignment-nf:v1.3'
   }
-  singularity { 
-    singularity.enabled = true 
-    process.container = 'shub://IARCbioinfo/alignment-nf:v1.2'
+  singularity {
+    singularity.enabled = true
+    singularity.autoMonts = true 
+    process.container = 'iarcbioinfo/alignment-nf:v1.3'
     pullTimeout = "200 min"
   }
 }
