printing calling parameters

--- a/nextflow.config
+++ b/nextflow.config
@@ -15,7 +15,7 @@ profiles {
   }
   singularity {
     singularity.enabled = true
-    singularity.autoMonts = true 
+    singularity.autoMonts = true
     process.container = 'iarcbioinfo/alignment-nf:v1.3'
     pullTimeout = "200 min"
   }
@@ -25,8 +25,7 @@ process {
     shell =  ['/bin/bash','-o','pipefail']
 }
 
-params.output_folder="."
-
+params.output_folder = "./results" 
 
 timeline {
   enabled = true
