--- a/nextflow.config
+++ b/nextflow.config
@@ -2,6 +2,7 @@ manifest {
     homePage = 'https://github.com/iarcbioinfo/alignment-nf'
     description = 'Align fastq or realign BAM files from Whole Exome/Whole Genome sequencing data'
     mainScript = 'alignment.nf'
+    version = 1.3
 }
 
 profiles {
@@ -25,7 +26,7 @@ process {
     shell =  ['/bin/bash','-o','pipefail']
 }
 
-params.output_folder = "./results" 
+params.output_folder = "./results"
 
 timeline {
   enabled = true
