--- a/nextflow.config
+++ b/nextflow.config
@@ -29,20 +29,24 @@ params.output_folder="."
 
 timeline {
   enabled = true
+  overwrite = true
   file = "${params.output_folder}/nf-pipeline_info/alignment-nf_timeline.html"
 }
 
 report {
   enabled = true
+  overwrite = true
   file = "${params.output_folder}/nf-pipeline_info/alignment-nf_report.html"
 }
 
 trace {
   enabled = true
+  overwrite = true
   file = "${params.output_folder}/nf-pipeline_info/alignment-nf_trace.txt"
 }
 
 dag {
   enabled = true
+  overwrite = true
   file = "${params.output_folder}/nf-pipeline_info/alignment-nf_dag.html"
 }
