--- a/environment.yml
+++ b/environment.yml
@@ -1,19 +1,21 @@
-name: alignment
+name: alignment2
 channels:
   - conda-forge
   - bioconda
 dependencies:
-  - gatk4=4.1.7.0
-  - multiqc=1.9
-  - qualimap=2.2.2d
-  - sambamba=0.7.1
-  - samtools=1.9
+  - gatk4=4.4.0.0
+  - multiqc=1.18
+  - qualimap=2.3
+  - sambamba=1.0
+  - samtools=1.18
   - samblaster=0.1.26
   - bwa=0.7.17
+  - bwa-mem2=2.2.1
   - bwakit=0.7.15
-  - r-data.table=1.12.8
-  - r-dplyr=1.0.0
-  - r-ggplot2=3.3.2
-  - r-gplots=3.0.3
-  - r-gsalib=2.1.0
-  - adapterremoval=2.3.1
+  - r-data.table=1.14.8
+  - r-dplyr=1.1.4
+  - r-ggplot2=3.4.4
+  - r-gplots=3.1.3
+  - r-gsalib=2.2.1
+  - adapterremoval=2.3.3
+
