handle single end mapping

--- a/nextflow.config
+++ b/nextflow.config
@@ -18,6 +18,20 @@ profiles {
     process.container = 'shub://IARCbioinfo/alignment-nf:v1.3'
     pullTimeout = "200 min"
   }
+
+  // iarc conf and files for hg38/GRCh38
+  iarc_hg38 {
+    params {
+      mem = 20
+      cpu_BQSR = 16
+      mem_BQSR = 60
+      ref = '/data/references/Homo_sapiens/GATK/hg38/Homo_sapiens_assembly38.fasta'
+      snp_vcf = '/data/references/Homo_sapiens/GATK/hg38/dbsnp_146.hg38.vcf.gz'
+      indel_vcf = '/data/references/Homo_sapiens/GATK/hg38/Mills_and_1000G_gold_standard.indels.hg38.vcf.gz'
+      alt = true
+    }
+  }
+
 }
 
 process {
@@ -29,24 +43,26 @@ params.output_folder="."
 
 timeline {
   enabled = true
-  overwrite = true
+  overwrite = false
   file = "${params.output_folder}/nf-pipeline_info/alignment-nf_timeline.html"
 }
 
 report {
   enabled = true
-  overwrite = true
+  overwrite = false
   file = "${params.output_folder}/nf-pipeline_info/alignment-nf_report.html"
 }
 
 trace {
   enabled = true
-  overwrite = true
+  overwrite = false
   file = "${params.output_folder}/nf-pipeline_info/alignment-nf_trace.txt"
 }
 
 dag {
   enabled = true
-  overwrite = true
+  overwrite = false
   file = "${params.output_folder}/nf-pipeline_info/alignment-nf_dag.html"
 }
+
+
