export the bwa output when the recalibration is not activated

--- a/nextflow.config
+++ b/nextflow.config
@@ -18,6 +18,11 @@ profiles {
     process.container = 'shub://IARCbioinfo/alignment-nf:v1.3'
     pullTimeout = "200 min"
   }
+  apptainer {
+    apptainer.enabled = true
+    process.container = 'shub://IARCbioinfo/alignment-nf:v1.3'
+    pullTimeout = "200 min"
+  }
 
   // iarc conf and files for hg38/GRCh38
   iarc_hg38 {
