profile iarc_hg38

--- a/nextflow.config
+++ b/nextflow.config
@@ -27,12 +27,13 @@ profiles {
   // iarc conf and files for hg38/GRCh38
   iarc_hg38 {
     params {
-      mem = 20
+      mem = 60
       cpu_BQSR = 16
       mem_BQSR = 60
       ref = '/data/references/Homo_sapiens/GATK/hg38/Homo_sapiens_assembly38.fasta'
-      snp_vcf = '/data/references/Homo_sapiens/GATK/hg38/dbsnp_146.hg38.vcf.gz'
+      snp_vcf = '/data/references/Homo_sapiens/GATK/hg38/gatk-best-practices/somatic-hg38/af-only-gnomad.hg38.vcf.gz'
       indel_vcf = '/data/references/Homo_sapiens/GATK/hg38/Mills_and_1000G_gold_standard.indels.hg38.vcf.gz'
+      PON = '/data/references/Homo_sapiens/GATK/hg38/gatk-best-practices/somatic-hg38/1000g_pon.hg38.vcf.gz'
       alt = true
     }
   }
